--- a/splash/splash.css
+++ b/splash/splash.css
@@ -438,6 +438,7 @@ section {
 .search-button {
   display: inline-block;
   box-sizing: border-box;
+  border-radius: 0; /* overwrite default Chrome styling */
   width: 2.2em;
   height: 2.2em;
   padding: .25em 0;
